# succinctx

./: Cargo.toml  rust-toolchain
plonky2x/core/: Cargo.toml
plonky2x/core/src/backend/circuit/serialization/: hints.rs
plonky2x/core/src/backend/wrapper/: wrap.rs
plonky2x/core/src/frontend/builder/: mod.rs
plonky2x/core/src/frontend/eth/mpt/: builder.rs  reference.rs
rustx/: Cargo.toml
