[workspace]
members = ["plonky2x/core", "plonky2x/derive", "rustx", "client"]
resolver = "2"

[profile.release]
opt-level = 3
incremental = true
#lto = "fat"
#codegen-units = 1

[profile.bench]
opt-level = 3

[patch.crates-io]
plonky2 = { git = "https://github.com/Lagrange-Labs/plonky2", branch = "upstream" }